bk_ida/gobmkida/c2/gametreefuseki
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1508:12: error: expected expression
*( _OWORD *)v8 = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1508:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v8 = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1509:14: error: expected expression
*( ( _OWORD *)v8 + 1) = 0LL; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1509:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v8 + 1) = 0LL; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1522:12: error: expected expression
*( _OWORD *)v12 = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1522:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v12 = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1523:14: error: expected expression
*( ( _OWORD *)v12 + 1) = 0LL; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1523:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v12 + 1) = 0LL; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1544:25: error: expected expression
if ( moves_per_game >=  enum mode ) 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1551:14: error: expected expression
*( ( _OWORD *)v9 + 1) = 0LL; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/sgf/sgfnode.c:1551:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v9 + 1) = 0LL; 
     ^
11 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametreefuseki/src/obj/4/sgfnode.o] Error 1
